--- a/main.html
+++ b/main.html
@@ -3,13 +3,121 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
+
+	<h1 style="text-align:center">Internship Form</h1>
+
+	<form class="needs-validation" novalidate>
+		<div class="row">
+			<!-- First Name -->
+			<div class="col">
+				<label for="first-name-input">First Name</label>
+				<input type="name" class="form-control" id="first-name-input" placeholder="First Name" required>
+				<div class="invalid-feedback">
+					First name required!
+				</div>
+			</div>
+			<!-- Second Name -->
+			<div class="col">
+				<label for="last-name-input">Last Name</label>
+				<input type="name" class="form-control" id="last-name-input" placeholder="Last Name" required>
+				<div class="invalid-feedback">
+					Last name required!
+				</div>
+			</div>
+			<!-- Email -->
+			<div class="col">
+				<label for="email-input">Email</label>
+				<input type="email" class="form-control" id="email-input" placeholder="Email" required>
+				<div class="invalid-feedback">
+					Email required!
+				</div>
+			</div>
+			<!-- <div class="col">
+				<label for="inputPassword4">Password</label>
+				<input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+			</div> -->
+		</div>
+
+
+		<div class="form-group">
+			<div class="row">
+				<!-- College Name -->
+				<div class="col">
+					<label for="college-input">College</label>
+					<input type="name" class="form-control" id="college-input" placeholder="College" required>
+					<div class="invalid-feedback">
+						Please provide a valid college.
+					</div>
+				</div>
+				<!-- Graduation Year -->
+				<div class="col">
+					<label for="graduation-input">Graduation Year</label>
+					<select id="graduation-input" class="form-control" required>
+					  <option selected disabled value="">Choose...</option>
+					  <option>2023</option>
+					  <option>2022</option>
+					  <option>2021</option>
+					  <option>2020</option>
+					</select>
+					<div class="invalid-feedback">
+						Please select a valid Graduation Year.
+					</div>
+				  </div>
+				<!-- Roll No -->
+				<div class="col">
+					<label for="roll-no-input">Roll No.</label>
+					<input type="number" class="form-control" id="roll-no-input" placeholder="Roll No." required>
+					<div class="invalid-feedback">
+						Please provide a valid Roll no.
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="form-check">
+			  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+			  <label class="form-check-label" for="invalidCheck">
+				Agree to terms and conditions
+			  </label>
+			  <div class="invalid-feedback">
+				You must agree before submitting.
+			  </div>
+			</div>
+		  </div>
+
+		<button type="submit" class="btn btn-primary">Submit Form</button>
+	</form>
+
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<!-- <script type="text/javascript" src="./script.js">
+	</script> -->
+	<script>
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+		(function() {
+		  'use strict';
+		  window.addEventListener('load', function() {
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			var forms = document.getElementsByClassName('needs-validation');
+			// Loop over them and prevent submission
+			var validation = Array.prototype.filter.call(forms, function(form) {
+			  form.addEventListener('submit', function(event) {
+				if (form.checkValidity() === false) {
+				  event.preventDefault();
+				  event.stopPropagation();
+				}
+				form.classList.add('was-validated');
+			  }, false);
+			});
+		  }, false);
+		})();
+		</script>
 
 </body>
 
