--- a/main.html
+++ b/main.html
@@ -16,23 +16,23 @@
 		<div class="row">
 			<!-- First Name -->
 			<div class="col">
-				<label for="first-name-input">First Name</label>
-				<input type="name" class="form-control" id="first-name-input" placeholder="First Name" required>
+				<label for="first-name-input" class="form-label">First Name</label>
+				<input type="text" class="form-control" id="first-name-input" placeholder="First Name" required>
 				<div class="invalid-feedback">
 					First name required!
 				</div>
 			</div>
 			<!-- Second Name -->
 			<div class="col">
-				<label for="last-name-input">Last Name</label>
-				<input type="name" class="form-control" id="last-name-input" placeholder="Last Name" required>
+				<label for="last-name-input" class="form-label">Last Name</label>
+				<input type="text" class="form-control" id="last-name-input" placeholder="Last Name" required>
 				<div class="invalid-feedback">
 					Last name required!
 				</div>
 			</div>
 			<!-- Email -->
 			<div class="col">
-				<label for="email-input">Email</label>
+				<label for="email-input" class="form-label">Email Address</label>
 				<input type="email" class="form-control" id="email-input" placeholder="Email" required>
 				<div class="invalid-feedback">
 					Email required!
@@ -49,16 +49,16 @@
 			<div class="row">
 				<!-- College Name -->
 				<div class="col">
-					<label for="college-input">College</label>
-					<input type="name" class="form-control" id="college-input" placeholder="College" required>
+					<label for="college-input" class="form-label">College</label>
+					<input type="text" class="form-control" id="college-input" placeholder="College" required>
 					<div class="invalid-feedback">
 						Please provide a valid college.
 					</div>
 				</div>
 				<!-- Graduation Year -->
 				<div class="col">
-					<label for="graduation-input">Graduation Year</label>
-					<select id="graduation-input" class="form-control" required>
+					<label for="grad-year-select" class="form-label">Graduation Year</label>
+					<select id="grad-year-select" class="form-control" required>
 					  <option selected disabled value="">Choose...</option>
 					  <option>2023</option>
 					  <option>2022</option>
@@ -71,8 +71,8 @@
 				  </div>
 				<!-- Roll No -->
 				<div class="col">
-					<label for="roll-no-input">Roll No.</label>
-					<input type="number" class="form-control" id="roll-no-input" placeholder="Roll No." required>
+					<label for="roll-no-input" class="form-label">Roll No.</label>
+					<input type="text" class="form-control" id="roll-no-input" placeholder="Roll No." required>
 					<div class="invalid-feedback">
 						Please provide a valid Roll no.
 					</div>
@@ -83,7 +83,7 @@
 		<div class="form-group">
 			<div class="form-check">
 			  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-			  <label class="form-check-label" for="invalidCheck">
+			  <label class="form-label" for="invalidCheck">
 				Agree to terms and conditions
 			  </label>
 			  <div class="invalid-feedback">
