--- a/main.html
+++ b/main.html
@@ -82,8 +82,8 @@
 
 		<div class="form-group">
 			<div class="form-check">
-			  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-			  <label class="form-label" for="invalidCheck">
+				<label class="form-label" for="conditions-checkbox"></label>
+			  	<input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
 				Agree to terms and conditions
 			  </label>
 			  <div class="invalid-feedback">
