--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
 				<!-- Graduation Year -->
 				<div class="col">
 					<label for="grad-year-select" class="form-label">Graduation Year</label>
-					<select id="grad-year-select" class="form-control" required>
+					<select id="grad-year-select" class="form-select" required>
 					  <option selected disabled value="">Choose...</option>
 					  <option>2023</option>
 					  <option>2022</option>
@@ -82,9 +82,9 @@
 
 		<div class="form-group">
 			<div class="form-check">
-				<label class="form-label" for="conditions-checkbox"></label>
+				<label class="form-label" for="conditions-checkbox">Agree to terms and conditions</label>
 			  	<input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
-				Agree to terms and conditions
+				<!-- Agree to terms and conditions -->
 			  </label>
 			  <div class="invalid-feedback">
 				You must agree before submitting.
